address issue where chevron button is hidden by safari menu bar on mobile devices

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -108,7 +108,7 @@
   }
 
   #warning {
-    margin-top: 300px;
+    margin-top: 200px;
     margin-bottom: 200px;
 
   }
